--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -61,21 +61,21 @@
       </div>
     </article>
     <div class="social-links">
-      <a href="#" class="social-link">
+      <a href="#" class="social-link" aria-label="facebook">
         <i class="fa-brands fa-facebook-square"></i>
       </a>
-      <a href="#" class="social-link">
+      <a href="#" class="social-link" aria-label="instagram">
         <i class="fa-brands fa-instagram"></i>
       </a>
       <a href="#" class="social-link">
-        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-twitter" aria-label="twitter"></i>
       </a>
     </div>
   </footer>
-  <p class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
-  </p>
+  </div>
 
 </body>
 </html>
