Adding README.md

--- a/equalizer-landing-page/index.html
+++ b/equalizer-landing-page/index.html
@@ -67,8 +67,8 @@
       <a href="#" class="social-link" aria-label="instagram">
         <i class="fa-brands fa-instagram"></i>
       </a>
-      <a href="#" class="social-link">
-        <i class="fa-brands fa-twitter" aria-label="twitter"></i>
+      <a href="#" class="social-link" aria-label="twitter">
+        <i class="fa-brands fa-twitter"></i>
       </a>
     </div>
   </footer>
