adding mobile designs

--- a/skilled-elearning-landing-page/index.html
+++ b/skilled-elearning-landing-page/index.html
@@ -3,50 +3,110 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta name="description" content="skilled e-learning website challenge">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <picture class="logo dark">
+        <img src="./assets/logo-dark.svg" alt="skilled" class="logo-icon">
+      </picture>
+      <button class="start">Get Started</button>
+    </nav>
+    <article class="information">
+      <div class="text-data">
+        <h1>Maximize skill, minimize budget</h1>
+        <p>Our modern courses across a range of in-demand skills will give you the 
+          knowledge you need to live the life you want.
+        </p>
+        <button>Get Started</button>
+        <picture class="human-image">
+          <img src="./assets/image-hero-mobile@2x.webp" alt="hero-icon">
+        </picture>
+      </div>
+    </article>
+  </header>
+  <main>
+    <article class="main-body">
+      <div class="color-card">
+        <p>Check out our most popular courses!</p>
+      </div>
+      <!-- Card 1 -->
+      <div class="card-container">
+        <picture class="card-logo">
+          <img src="./assets/icon-animation.svg" alt="Animation">
+        </picture>
+        <p class="card-title">Animation</p>
+        <p class="card-text">Learn the latest animation techniques to create stunning motion 
+          design and captivate your audience.
+        </p>
+        <a href="#" class="learn-more">Get Started</a>
+      </div>
+      <!-- Card 2 -->
+      <div class="card-container">
+        <picture class="card-logo">
+          <img src="./assets/icon-design.svg" alt="Design">
+        </picture>
+        <p class="card-title">Design</p>
+        <p class="card-text">Create beautiful, usable interfaces to help shape the future of 
+          how the web looks.
+        </p>
+        <a href="#" class="learn-more">Get Started</a>
+      </div>
+      <!-- Card 3 -->
+      <div class="card-container">
+        <picture class="card-logo">
+          <img src="./assets/icon-photography.svg" alt="Photography">
+        </picture>
+        <p class="card-title">Photography</p>
+        <p class="card-text">Explore critical fundamentals like lighting, composition, and focus 
+          to capture exceptional photos.
+        </p>
+        <a href="#" class="learn-more">Get Started</a>
+      </div>
+      <!-- Card 4 -->
+      <div class="card-container">
+        <picture class="card-logo">
+          <img src="./assets/icon-crypto.svg" alt="Crypto">
+        </picture>
+        <p class="card-title">Crypto</p>
+        <p class="card-text">All you need to know to get started investing in crypto. Go from beginner 
+          to advanced with this 54 hour course.
+        </p>
+        <a href="#" class="learn-more">Get Started</a>
+      </div>
+      <!-- Card 5 -->
+      <div class="card-container">
+        <picture class="card-logo">
+          <img src="./assets/icon-business.svg" alt="Business">
+        </picture>
+        <p class="card-title">Business</p>
+        <p class="card-text">A step-by-step playbook to help you start, scale, and sustain your business 
+          without outside investment.
+        </p>
+        <a href="#" class="learn-more">Get Started</a>
+      </div>
+    </article>
+  </main>
+  <!-- Footer -->
+  <footer>
+    <picture class="logo">
+      <img src="./assets/logo-light.svg" alt="logo-icon" class="logo-light">
+    </picture>
+    <button class="start">Get Started</button>
+  </footer> 
+  <!--
+<footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+      </p>
+</footer>
 
-  Get Started
-
-  Maximize skill, minimize budget
-
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
-
-  Get Started
-
-  Check out our most popular courses!
-
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
-
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
-
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
-
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started
+-->
 
 </body>
 </html>
