--- a/skilled-elearning-landing-page/index.html
+++ b/skilled-elearning-landing-page/index.html
@@ -23,10 +23,12 @@
           knowledge you need to live the life you want.
         </p>
         <button>Get Started</button>
-        <picture class="human-image">
-          <img src="./assets/image-hero-mobile@2x.webp" alt="hero-icon">
-        </picture>
       </div>
+      <picture class="human-image">
+        <img src="./assets/image-hero-mobile@2x.webp" alt="hero-icon" class="mobile-hero">
+        <img src="./assets/image-hero-tablet@2x.webp" alt="hero-icon" class="tablet-hero">
+        <img src="./assets/image-hero-desktop@2x.webp" alt="hero-icon" class="desktop-hero">
+      </picture>
     </article>
   </header>
   <main>
@@ -93,20 +95,21 @@
   </main>
   <!-- Footer -->
   <footer>
-    <picture class="logo">
-      <img src="./assets/logo-light.svg" alt="logo-icon" class="logo-light">
-    </picture>
-    <button class="start">Get Started</button>
+    <article class="main-footer">
+      <picture class="logo">
+        <img src="./assets/logo-light.svg" alt="logo-icon" class="logo-light">
+      </picture>
+      <button class="start">Get Started</button>
+    </article>
   </footer> 
-  <!--
-<footer>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
-      </p>
-</footer>
+  <!-- Attribution -->
+  <p class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+  </p>
 
--->
+
+
 
 </body>
 </html>
