--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -3,29 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Meet landing page</title>
 </head>
 <body>
-  Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
-
-  Download v1.3
-  What is it?
-
-  01
-  Built for modern use
-
-  Smarter meetings, all in one place
-
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-  Download v1.3
+  <header>
+    <div class="circle-container">
+      <div class="circle circle-a"></div>
+      <div class="circle circle-b"></div>
+    </div>
+    <h1>meet</h1>
+  </header>
+  <main>
+    <article class="introduction">
+      <picture class="people">
+        <img src="./assets/tablet/image-hero.png" alt="hero-img">
+      </picture>
+      <div class="intro-text">
+        <h1>Group Chat for Everyone</h1>
+        <p>
+          Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+        </p>
+        <button class="download big-button">Download <span class="version">v1.3</span></button>
+        <button class="more-info">What is it?</button>
+      </div>
+    </article>
+    <article class="center-container">
+      <div class="designer-box">
+        <div class="line"></div>
+        <div class="number">01</div>
+      </div>
+      <div class="image-container">
+        <img src="./assets/desktop/image-woman-in-videocall.jpg" alt="women-in-videocall" class="single-image">
+        <img src="./assets/desktop/image-women-videochatting.jpg" alt="women-videochatting" class="single-image">
+        <img src="./assets/desktop/image-men-in-meeting.jpg" alt="men-in-meeting" class="single-image">
+        <img src="./assets/desktop/image-man-texting.jpg" alt="man-texting" class="single-image">
+      </div>
+    </article>
+    <article class="information">
+      <p class="blue-highlight">Built for modern use</p>
+      <h1>Smarter meetings, all in one place</h1>
+      <p>Send messages, share files, show your screen, and record your meetings — all in one 
+        workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+    </article>
+  </main>
+  <footer>
+    <div class="designer-box">
+      <div class="line"></div>
+      <div class="number">02</div>
+    </div>
+    <h1>Experience more together</h1>
+    <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+    <button class="big-button">Download <span>v1.3</span></button>
+  </footer>
 </body>
 </html>
