--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -26,8 +26,10 @@
         <p>
           Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
         </p>
-        <button class="download big-button">Download <span class="version">v1.3</span></button>
-        <button class="more-info">What is it?</button>
+        <div class="buttons-container">
+          <button class="download big-button">Download <span class="version">v1.3</span></button>
+          <button class="more-info">What is it?</button>
+        </div>
       </div>
     </article>
     <article class="center-container">
@@ -41,12 +43,13 @@
         <img src="./assets/desktop/image-men-in-meeting.jpg" alt="men-in-meeting" class="single-image">
         <img src="./assets/desktop/image-man-texting.jpg" alt="man-texting" class="single-image">
       </div>
-    </article>
-    <article class="information">
-      <p class="blue-highlight">Built for modern use</p>
-      <h1>Smarter meetings, all in one place</h1>
-      <p>Send messages, share files, show your screen, and record your meetings — all in one 
-        workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+      <div class="information">
+        <p class="blue-highlight">Built for modern use</p>
+        <h1>Smarter meetings, all in one place</h1>
+        <p>Send messages, share files, show your screen, and record your meetings — all in one 
+          workspace. Control who can join with invite-only team access, data encryption, and data export.
+        </p>
+      </div>
     </article>
   </main>
   <footer>
