Adding desktop design

--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -19,7 +19,10 @@
   <main>
     <article class="introduction">
       <picture class="people">
-        <img src="./assets/tablet/image-hero.png" alt="hero-img">
+        <img src="./assets/tablet/image-hero.png" alt="hero-img" class="mobile-image">
+      </picture>
+      <picture class="person person-left">
+        <img src="./assets/desktop/image-hero-left.png" alt="hero-left" class="desktop-image image-left">
       </picture>
       <div class="intro-text">
         <h1>Group Chat for Everyone</h1>
@@ -31,6 +34,9 @@
           <button class="more-info">What is it?</button>
         </div>
       </div>
+      <picture class="person person-right">
+        <img src="./assets/desktop/image-hero-right.png" alt="hero-right" class="desktop-image image-right">
+      </picture>
     </article>
     <article class="center-container">
       <div class="designer-box">
@@ -57,9 +63,16 @@
       <div class="line"></div>
       <div class="number">02</div>
     </div>
-    <h1>Experience more together</h1>
-    <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-    <button class="big-button">Download <span>v1.3</span></button>
+    <div class="display-content">
+      <h1>Experience more together</h1>
+      <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+      <button class="big-button">Download <span>v1.3</span></button>
+    </div>
+    
   </footer>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+  </div>
 </body>
 </html>
