adding custom tablet changes

--- a/fylo-landing-page-with-two-column-layout-master/index.html
+++ b/fylo-landing-page-with-two-column-layout-master/index.html
@@ -40,7 +40,8 @@
   </header>
   <main class="main">
     <div class="top-image">
-      <img src="./images/bg-curve-mobile.svg" alt="">
+      <img src="./images/bg-curve-mobile.svg" alt="" class="mob-curve">
+      <img src="./images/bg-curve-desktop.svg" alt="" class="desktop-curve">
     </div>
     <article class="box">
       <picture class="box__logo">
