adding changes to rating buttons

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -18,11 +18,11 @@
       to help us improve our offering!
     </p>
     <div class="rating-container" id="rating-container">
-      <button class="rating-btn" id="1">1</button>
-      <button class="rating-btn" id="2">2</button>
-      <button class="rating-btn" id="3">3</button>
-      <button class="rating-btn" id="4">4</button>
-      <button class="rating-btn" id="5">5</button>
+      <li class="rating-btn" id="1">1</li>
+      <li class="rating-btn" id="2">2</li>
+      <li class="rating-btn" id="3">3</li>
+      <li class="rating-btn" id="4">4</li>
+      <li class="rating-btn" id="5">5</li>
     </div>
     <button class="btn-submit" id="button">Submit</button>
   </article>
