adding changes for desktop design

--- a/clipboard-landing-page-master/index.html
+++ b/clipboard-landing-page-master/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Clipboard landing page</title>
 </head>
 <body>
-  <header class="flex-align">
+  <header class="flex-align header">
     <picture class="header-logo">
       <img src="./images/logo.svg" alt="logo">
     </picture>
@@ -32,23 +32,25 @@
         <h1 class="main-header">Keep track of your snippets</h1>
         <p class="para-text">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
       </div>
-      <picture class="desktop-image main-img">
-        <img src="./images/image-computer.png" alt="desktop-image">
-      </picture>
-      <aside class="description flex-align">
-        <div class="description-box flex-align ">
-          <h2>Quick Search</h2>
-          <p class="para-text">Easily search your snippets by content, category, web address, application, and more.</p>
-        </div>
-        <div class="description-box flex-align ">
-          <h2>iCloud Sync</h2>
-          <p class="para-text">Instantly saves and syncs snippets across all your devices.</p>
-        </div>
-        <div class="description-box flex-align ">
-          <h2>Complete History</h2>
-          <p class="para-text">Retrieve any snippets from the first moment you started using the app.</p>
-        </div>
-      </aside>
+      <div class="top-grid-container">
+        <picture class="desktop-image main-img">
+          <img src="./images/image-computer.png" alt="desktop-image">
+        </picture>
+        <aside class="description flex-align">
+          <div class="description-box flex-align ">
+            <h2>Quick Search</h2>
+            <p class="para-text">Easily search your snippets by content, category, web address, application, and more.</p>
+          </div>
+          <div class="description-box flex-align ">
+            <h2>iCloud Sync</h2>
+            <p class="para-text">Instantly saves and syncs snippets across all your devices.</p>
+          </div>
+          <div class="description-box flex-align ">
+            <h2>Complete History</h2>
+            <p class="para-text">Retrieve any snippets from the first moment you started using the app.</p>
+          </div>
+        </aside>
+      </div>
     </article>
     <!-- Second article -->
     <article class="mid-article flex-align">
