--- a/single-page-developer-portfolio/index.html
+++ b/single-page-developer-portfolio/index.html
@@ -14,7 +14,7 @@
       <img src="./images/pattern-rings.svg" alt="" class="rings">
       <img src="./images/pattern-circle.svg" alt="" class="circle">
     </div>
-    <nav class="navigation flex-display">
+    <nav class=" header-navigation navigation flex-display">
       <p class="name medium-header">adamkeyes</p>
       <ul class="navigation__list flex-display">
         <li>
@@ -53,7 +53,7 @@
   </header>
   <main class="main">
     
-    <!-- -------------------Skills------------------------ -->
+                    <!-- Skills -->
     <section class="grid-container skills">
       <div class="skill flex-display">
         <h2 class="skill-name">HTML</h2>
@@ -83,7 +83,7 @@
         <img src="./images/pattern-rings.svg" alt="" class="rings">
       </div>
     </section>
-    <!-- --------------- Projects Section -------- -->
+            <!-- Projects Section -->
     <section class="projects flex-display">
       <div class="projects__header flex-display">
         <h1 class="sub-header">Projects</h1>
@@ -92,10 +92,10 @@
       <article class="projects-container flex-display">
         <!-- Project 1 -->
         <div class="project project-1 flex-display">
-          <picture class="project__bg">
+          <div class="project__bg">
             <img src="./images/thumbnail-project-1-small.webp" alt="project-image" class="mobile-preview">
             <img src="./images/thumbnail-project-1-large.webp" alt="project-image" class="desktop-preview">
-          </picture>
+          </div>
           <h2 class="medium-header project__title">Design Portfolio</h2>
           <div class="project__skills flex-display">
             <p class="para-font">html</p>
@@ -108,10 +108,10 @@
         </div>
         <!-- Project 2 -->
         <div class="project project-2 flex-display">
-          <picture class="project__bg">
+          <div class="project__bg">
             <img src="./images/thumbnail-project-2-small.webp" alt="project-image" class="mobile-preview">
             <img src="./images/thumbnail-project-2-large.webp" alt="project-image" class="desktop-preview">
-          </picture>
+          </div>
           <h2 class="medium-header project__title">E-learning landing page</h2>
           <div class="project__skills flex-display">
             <p class="para-font">html</p>
@@ -124,10 +124,10 @@
         </div>
         <!-- Project 3 -->
         <div class="project project-3 flex-display">
-          <picture class="project__bg">
+          <div class="project__bg">
             <img src="./images/thumbnail-project-3-small.webp" alt="project-image" class="mobile-preview">
             <img src="./images/thumbnail-project-3-large.webp" alt="project-image" class="desktop-preview">
-          </picture>
+          </div>
           <h2 class="medium-header project__title">Todo web app</h2>
           <div class="project__skills flex-display">
             <p class="para-font">html</p>
@@ -141,10 +141,10 @@
         </div> 
         <!-- Project 4-->
         <div class="project project-4 flex-display">
-          <picture class="project__bg">
+          <div class="project__bg">
             <img src="./images/thumbnail-project-4-small.webp" alt="project-image" class="mobile-preview">
             <img src="./images/thumbnail-project-4-large.webp" alt="project-image" class="desktop-preview">
-          </picture>
+          </div>
           <h2 class="medium-header project__title">Entertainment web app</h2>
           <div class="project__skills flex-display">
             <p class="para-font">html</p>
@@ -158,10 +158,10 @@
         </div> 
         <!-- Project 5 -->
         <div class="project project-5 flex-display">
-          <picture class="project__bg">
+          <div class="project__bg">
             <img src="./images/thumbnail-project-5-small.webp" alt="project-image" class="mobile-preview">
             <img src="./images/thumbnail-project-5-large.webp" alt="project-image" class="desktop-preview">
-          </picture>
+          </div>
           <h2 class="medium-header project__title">Memory Game</h2>
           <div class="project__skills flex-display">
             <p class="para-font">html</p>
@@ -175,10 +175,10 @@
         </div> 
         <!-- Project 6 -->
         <div class="project project-6 flex-display">
-          <picture class="project__bg">
+          <div class="project__bg">
             <img src="./images/thumbnail-project-6-small.webp" alt="project-image" class="mobile-preview">
             <img src="./images/thumbnail-project-6-large.webp" alt="project-image" class="desktop-preview">
-          </picture>
+          </div>
           <h2 class="medium-header project__title">Art gallery showcase</h2>
           <div class="project__skills flex-display">
             <p class="para-font">html</p>
@@ -205,12 +205,12 @@
         <label for="name">
           <input type="text" name="name" id="name" placeholder="name"/>
           <small class="exclamation hidden">!</small>
-          <small class="error-msg hidden" id="error-msg">Error message</small>
+          <small class="error-msg hidden">Error message</small>
         </label>
         <label for="email">
           <input type="text" name="email" id="email" placeholder="email"/>
           <small class="exclamation hidden">!</small>
-          <small class="error-msg hidden" id="error-msg">Error message</small>
+          <small class="error-msg hidden">Error message</small>
         </label>
         <label for="message">
           <textarea name="message" id="message" placeholder="message" rows="3"></textarea>
